Only do special height reflows for percentage-height children of table cells when there is a specified height on the table, row group, row, or cell in the row.  b=370525  Patch by Daniel Holbert <dholbert@mozilla.com>.  r+sr=dbaron